--- a/coursera_project.ipynb
+++ b/coursera_project.ipynb
@@ -213,7 +213,8 @@
     "        #print('read ' + name)\n",
     "        data = archive.read(name)\n",
     "        img = cv2.imdecode(np.frombuffer(data, np.uint8), cv2.IMREAD_COLOR)\n",
-    "        text = pytesseract.image_to_string(Image.fromarray(cv2.cvtColor(img, cv2.COLOR_BGR2RGB)), lang='eng')\n",
+    "        text = pytesseract.image_to_string(\n",
+    "               Image.fromarray(cv2.cvtColor(img, cv2.COLOR_BGR2RGB)), lang='eng')\n",
     "        #print(text)\n",
     "        #print('-' * 20)\n",
     "\n",
